# agent_tools

./: .coverage  .cursorules  README.md  pyproject.toml  pytest.ini  run_test.py  temp_function.py  test_function.py  test_llm_logging.py  test_packages.py  test_script.py
.cursor/: EVERY_PROMPT.mdc  LESSONS_LEARNED.md  METHOD_VALIDATOR_LESSONS.md  MODEL_SYSTEM_PROMPT.mdc  README.md  README_for_next_agent.md  TECHNICAL_DEBT.md  TESTING_LESSONS.md  TROUBLESHOOTING.md
.cursor/examples/: README.md  index.md
.cursor/examples/01-async/: error_handling.py  to_thread_example.py
.cursor/examples/02-embedding/: embedding_storage.py  nomic_embed_example.py
.cursor/examples/03-llm/: litellm_basic.py
.cursor/examples/04-testing/: embedding_test_example.py
.cursor/examples/05-db/: arangodb_basic.py
.cursor/rules/: 000-core-rules.mdc  001-code-advice-rules.mdc  002-design-patterns-index.mdc  002-design-patterns.mdc  004-testing-practices.mdc  005-async-patterns.mdc  009-virtualenv-usage.mdc  011-embedding-practices.mdc  012-database-arangodb.mdc  pyproject.toml
.cursor/rules/design_patterns/: async_patterns.mdc
.cursor/troubleshoot/: README.md  environment-setup.md  pytest-debugging.md  test-categories.md  testing-guidelines.md
cursor/rules/: pyproject.toml
scripts/: create_project_repo.sh  install.sh  organize_main_files.sh  reorganize_cursor_rules.sh  reorganize_tests.sh  update.sh  update_cursor_rules_dir.sh  update_imports.sh
src/agent_tools/: __init__.py
src/agent_tools/agent_memory/: notes.md  task.md
src/agent_tools/analysis/: method_analysis.db
src/agent_tools/cursor_rules/: README.md  __init__.py  cli.py  cursor_rules.py  demo.py
src/agent_tools/cursor_rules/cli/: __init__.py  cli.py  rule_search_cli.py
src/agent_tools/cursor_rules/core/: __init__.py  ai_knowledge_db.py  cursor_rules.py  db.py  enhanced_db.py  glossary.py  glossary_search.py  model_connector.py  pydantic_models.py  unified_glossary_search.py
src/agent_tools/cursor_rules/docs/: arango_commands.md  retrieval_scenarios.md  task.md
src/agent_tools/cursor_rules/embedding/: __init__.py  embedding_utils.py
src/agent_tools/cursor_rules/llm/: initialize_litellm_cache.py  litellm_call.py  multimodal_utils.py  retry_llm_call.py
src/agent_tools/cursor_rules/scenarios/: common_queries.py  sample_scenarios.json  scenario_management.py
src/agent_tools/cursor_rules/schemas/: __init__.py  ai_knowledge_schema.json  db_schema.json
src/agent_tools/cursor_rules/scripts/: demo.py  fix_glossary_embeddings.py  hello_world.py  hello_world_2.py  populate_glossary.py  test_embedding.py
src/agent_tools/cursor_rules/tests/: README.md  __init__.py  check_embedding_format.py  check_glossary_embeddings.py  compare_search_approaches.py  conftest.py  demo_term_embedding.py  test_agent_reasoning.py  test_agent_reasoning_minimal.py  test_comparative_search.py  test_comprehensive_term_search.py  test_embedded_term_extraction.py  test_embedded_term_search.py  test_glossary_collection.py  test_glossary_search.py  test_glossary_search_cli.py  test_glossary_search_phrase.py  test_search_comparison.py  test_semantic_boost.py  test_semantic_term_definition.py  test_term_search.py  test_thresholds.py  test_unified_glossary_search.py  test_user_question_term_extraction.py
src/agent_tools/cursor_rules/utils/: __init__.py  exceptions.py  file_utils.py  image_utils.py  logging.py  rule_enforcer.py  rule_search.py  test_state.py  update_litellm_calls.py  vector_utils.py
src/agent_tools/cursor_rules/views/: create_error_code_collection.py  create_vector_index.py  create_view.py  view_utils.py
src/agent_tools/dualipa/: LESSONS_LEARNED.md  README.md  __init__.py  code_extractor.py  extract_repo.py  format_dataset.py  github_utils.py  language_detection.py  llm_generator.py  markdown_parser.py  pipeline.py  pyproject.toml  pytest-asyncio.ini  qa_validator.py  requirements.txt  train_lora.py
src/agent_tools/dualipa/examples/: __init__.py  cli_usage.py
src/agent_tools/dualipa/tests/: __init__.py  conftest.py  requirements-test.txt  test_basic_dependencies.py  test_enhanced_qa_generation.py  test_extract_repo.py  test_format_dataset.py  test_github_utils.py  test_litellm_integration.py  test_llm_capabilities.py  test_llm_generator.py  test_markdown_parser.py  test_qa_validator.py  test_repo_operations.py  test_smoke_compliance.py  test_train_lora.py
src/agent_tools/method_validator/: README.md  __init__.py  analyzer.py  cache.py  cli.py  constants.py  function_improver.py  method_validator.py  static_analysis_task.md  task.md  utils.py
src/agent_tools/method_validator/analysis/: extracted_tables.json  method_analysis_cache.db
src/agent_tools/method_validator/examples/: litellm_integration.py  table_extractor.py
src/agent_tools/method_validator/tests/: requirements.txt  test_web_extraction.py
src/arangodb/: chat_database.py  database.py  db_schema_example.json  get_first_embed.py  get_sample_data.py  initialize_database.py  insert_schema_into_collection copy.py  load_aql_queries.py
src/arangodb/aql/: bm25_embedding_keyword_combined.aql  bm25_embedding_keyword_combined_v2.aql  bm25_query_tool.py  bm25_search.aql  embedding_search.aql  glossary_search.aql
src/arangodb/errors/: aql_query_tool.code-workspace  errors_to_json.py
src/arangodb/generate_schema_for_llm/: generate_schema_for_llm.py
src/arangodb/generate_schema_for_llm/shared/: README.md  env_utils.py  (+3 more)
src/arangodb/scripts/: add_movies_actors.py  add_movies_actors.sh  arangodb_dump.sh  arangostore_imdb_import copy 2.sh  arangostore_imdb_import.sh  create_view.sh  populate_movie_db.js  search_tabs_copy.scpt  setup_rye_python.sh
src/arangodb/search/: bm25_embedding_keyword_combined.py  glossary_search_rapid_fuzz.py
src/arangodb/view_helpers/: create_analyzer.py  create_vector_index.py  create_view.py
src/fetch_page/embedding/: embedding_utils.py
tests/: test_bm25_search.py  test_cursor_rules.py
tests/unit/: test_analyzer.py  test_analyzer_quality.py  test_cache.py  test_cli.py  test_function_improver.py  test_validation.py
tmp/: demo.py
(+82 files in other folders)
