[project]
name = "cursor-rules"
version = "0.1.0"
description = "Cursor MDC rules from snippets repository"
authors = [{ name = "Robert", email = "robert@example.com" }]
requires-python = ">=3.8"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["*.mdc"]

[tool.hatch.metadata]
allow-direct-references = true 