[project]
name = "cursor-rules"
version = "0.1.0"
description = "Cursor MDC rules from snippets repository"
authors = [{ name = "Graham Anderson", email = "graham@grahama.co" }]
requires-python = ">=3.8"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["*.mdc"]
artifacts = ["*.mdc"]

[tool.hatch.build.targets.wheel]
artifacts = ["*.mdc"]
install-dir = ".cursor/rules"

[tool.hatch.metadata]
allow-direct-references = true